docs/en/4.1.0/api/Adapter.md
#Adapter
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;9</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#mactivateSTATIC" data-target="cMethodactivate" class="autouncollapse">activate</a></li><li><a href="#mbtConnectSTATIC" data-target="cMethodbtConnect" class="autouncollapse">btConnect</a></li><li><a href="#mbtDisconnectSTATIC" data-target="cMethodbtDisconnect" class="autouncollapse">btDisconnect</a></li><li><a href="#mgetDeviceInfoSTATIC" data-target="cMethodgetDeviceInfo" class="autouncollapse">getDeviceInfo</a></li><li><a href="#mresetSTATIC" data-target="cMethodreset" class="autouncollapse">reset</a></li><li><a href="#msetConfigChangeHandlerSTATIC" data-target="cMethodsetConfigChangeHandler" class="autouncollapse">setConfigChangeHandler</a></li><li><a href="#msetMessageHandlerSTATIC" data-target="cMethodsetMessageHandler" class="autouncollapse">setMessageHandler</a></li><li><a href="#msetTagDetectionHandlerSTATIC" data-target="cMethodsetTagDetectionHandler" class="autouncollapse">setTagDetectionHandler</a></li><li><a href="#mstopSTATIC" data-target="cMethodstop" class="autouncollapse">stop</a></li></li></ul></div><div class="btn-group"><a href="#Properties" class="btn"><i class="icon-list"></i> Properties<sup>&nbsp;5</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Class Properties</i></b></a><li><a href="#pisActive" data-target="cPropertyisActive" class="autouncollapse">isActive</a></li><li><a href="#ppasskey" data-target="cPropertypasskey" class="autouncollapse">passkey</a></li><li><a href="#ppollingTimeout" data-target="cPropertypollingTimeout" class="autouncollapse">pollingTimeout</a></li><li><a href="#psupported" data-target="cPropertysupported" class="autouncollapse">supported</a></li><li><a href="#pversion" data-target="cPropertyversion" class="autouncollapse">version</a></li></li></ul></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">Javascript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>NFC Adapter</p>
<p>NFC Adapter provides access to the NFC device to perform device related operations.</p>

<pre><code>All properties and methods should be used after activate. Besides supported and isActive.
</code></pre>

<h2>Enabling the API</h2>

<p>In order to use this API you must include the following extension in your <code>build.yml</code></p>

<pre><code>:::ruby
extensions: ["NFC"]
</code></pre>

<p>NOTE: If you are building a Windows Mobile or Windows CE app with this API, you must set your app_type as &ldquo;rhoelements&rdquo; in your build.yml as shown <a href="../guide/build_config#other-build-time-settings">here</a>.</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mactivateSTATIC'/><div class=' method  js ruby' id='mactivateSTATIC'><h3><strong  >activate</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mactivateSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mactivateSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mactivateSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-activateSTATIC'><div class="tab-pane fade active in" id="mactivateSTATIC1"><p>Activates the NFC device so that all the NFC operations will be executed.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mactivateSTATIC2"></div><div class="tab-pane fade" id="mactivateSTATIC3"></div><div class="tab-pane fade" id="mactivateSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mactivateSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.activate()</code> </li><li>Ruby: <code>Rho::Adapter.activate()</code></li></ul></li></ul></div></div></div>  </div><a name ='mbtConnectSTATIC'/><div class=' method  js ruby' id='mbtConnectSTATIC'><h3><strong  >btConnect</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mbtConnectSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mbtConnectSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mbtConnectSTATIC3" data-toggle="tab">Callback</a></li><li ><a href="#mbtConnectSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mbtConnectSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-btConnectSTATIC'><div class="tab-pane fade active in" id="mbtConnectSTATIC1"><p>Connects the Bluetooth device to obtain device properties.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mbtConnectSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="mbtConnectSTATIC3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>btName : <span class='text-info'>STRING</span><p><p>Device name.</p>
 </p></li><li>btAddress : <span class='text-info'>STRING</span><p><p>Device MAC address.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mbtConnectSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mbtConnectSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.btConnect(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Adapter.btConnect(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mbtDisconnectSTATIC'/><div class=' method  js ruby' id='mbtDisconnectSTATIC'><h3><strong  >btDisconnect</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mbtDisconnectSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mbtDisconnectSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mbtDisconnectSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-btDisconnectSTATIC'><div class="tab-pane fade active in" id="mbtDisconnectSTATIC1"><p>Disconnects the Bluetooth device.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mbtDisconnectSTATIC2"></div><div class="tab-pane fade" id="mbtDisconnectSTATIC3"></div><div class="tab-pane fade" id="mbtDisconnectSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mbtDisconnectSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.btDisconnect()</code> </li><li>Ruby: <code>Rho::Adapter.btDisconnect()</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetDeviceInfoSTATIC'/><div class=' method  js ruby' id='mgetDeviceInfoSTATIC'><h3><strong  >getDeviceInfo</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetDeviceInfoSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mgetDeviceInfoSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mgetDeviceInfoSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getDeviceInfoSTATIC'><div class="tab-pane fade active in" id="mgetDeviceInfoSTATIC1"><p>Gets the NFC device capabilities.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetDeviceInfoSTATIC2"></div><div class="tab-pane fade" id="mgetDeviceInfoSTATIC3"></div><div class="tab-pane fade" id="mgetDeviceInfoSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : <p>Return hash with capabilities.</p>
<ul><li>operatingModesSupported : <span class='text-info'>ARRAY</span><p> </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p><p><strong>Possible Values</strong> :</p> <dt>Constant: Rho::Adapter.NFC_P2P (For Ruby use "::" instead of ".")<br/> String: 1 </dt><dd></dt><dt>Constant: Rho::Adapter.NFC_Reader_Writer (For Ruby use "::" instead of ".")<br/> String: 2 </dt><dd></dt><dt>Constant: Rho::Adapter.NFC_CE (For Ruby use "::" instead of ".")<br/> String: 3 </dt><dd></dt><dt>Constant: Rho::Adapter.NFC_CE_UICC (For Ruby use "::" instead of ".")<br/> String: 4 </dt><dd></dt><dt>Constant: Rho::Adapter.NFC_CE_SE (For Ruby use "::" instead of ".")<br/> String: 5 </dt><dd></dt><dt>Constant: Rho::Adapter.NFC_CE_Host (For Ruby use "::" instead of ".")<br/> String: 6 </dt><dd></dt><dt>Constant: Rho::Adapter.Multiple_NDEFMessages (For Ruby use "::" instead of ".")<br/> String: 7 </dt><dd></dt><dt>Constant: Rho::Adapter.NFC_LLCP (For Ruby use "::" instead of ".")<br/> String: 8 </dt><dd></dt><dt>Constant: Rho::Adapter.NFC_SNEP (For Ruby use "::" instead of ".")<br/> String: 9 </dt><dd></dt><dt>Constant: Rho::Adapter.NFC_NPP (For Ruby use "::" instead of ".")<br/> String: 10 </dt><dd></dt><dt>Constant: Rho::Adapter.NFC_BT_StaticHandover (For Ruby use "::" instead of ".")<br/> String: 11 </dt><dd></dt><dt>Constant: Rho::Adapter.NFC_BT_DynamicHandover (For Ruby use "::" instead of ".")<br/> String: 12 </dt><dd></dt></dl></li></ul><li>tagsSupported : <span class='text-info'>ARRAY</span><p><p>Array with tag types &ndash; only those tags will be detected.</p>
 </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p><p><strong>Possible Values</strong> :</p> <dt>Constant: Rho::Adapter.MiFareUL (For Ruby use "::" instead of ".")<br/> String: 1 </dt><dd></dt><dt>Constant: Rho::Adapter.MiFareStd (For Ruby use "::" instead of ".")<br/> String: 2 </dt><dd></dt><dt>Constant: Rho::Adapter.MifareULC (For Ruby use "::" instead of ".")<br/> String: 3 </dt><dd></dt><dt>Constant: Rho::Adapter.ISO14443_4A (For Ruby use "::" instead of ".")<br/> String: 4 </dt><dd></dt><dt>Constant: Rho::Adapter.ISO14443_4B (For Ruby use "::" instead of ".")<br/> String: 5 </dt><dd></dt><dt>Constant: Rho::Adapter.ISO15693 (For Ruby use "::" instead of ".")<br/> String: 6 </dt><dd></dt><dt>Constant: Rho::Adapter.FeliCa (For Ruby use "::" instead of ".")<br/> String: 7 </dt><dd></dt><dt>Constant: Rho::Adapter.Jewel (For Ruby use "::" instead of ".")<br/> String: 8 </dt><dd></dt><dt>Constant: Rho::Adapter.Desfire (For Ruby use "::" instead of ".")<br/> String: 9 </dt><dd></dt><dt>Constant: Rho::Adapter.MiFarePlus (For Ruby use "::" instead of ".")<br/> String: 10 </dt><dd></dt><dt>Constant: Rho::Adapter.NXPIcode (For Ruby use "::" instead of ".")<br/> String: 11 </dt><dd></dt><dt>Constant: Rho::Adapter.Topaz (For Ruby use "::" instead of ".")<br/> String: 12 </dt><dd></dt><dt>Constant: Rho::Adapter.Calypso (For Ruby use "::" instead of ".")<br/> String: 13 </dt><dd></dt><dt>Constant: Rho::Adapter.TITagIt (For Ruby use "::" instead of ".")<br/> String: 14 </dt><dd></dt></dl></li></ul><li>formattingTagsSupported : <span class='text-info'>ARRAY</span><p><p>Array with tag types &ndash; only those tags will be detected. See above tagsSupported parameter.</p>
 </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p></li></ul><li>writeProtectedTagsSupported : <span class='text-info'>ARRAY</span><p><p>Array with tag types &ndash; only those tags will be detected. See see above tagsSupported parameter.</p>
 </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p></li></ul><li>firmwareVersion : <span class='text-info'>STRING</span><p><p>This array has only one element.</p>
 </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></li></ul></div></div><div class="tab-pane fade" id="mgetDeviceInfoSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.getDeviceInfo()</code> </li><li>Ruby: <code>Rho::Adapter.getDeviceInfo()</code></li></ul></li></ul></div></div></div>  </div><a name ='mresetSTATIC'/><div class=' method  js ruby' id='mresetSTATIC'><h3><strong  >reset</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mresetSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mresetSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mresetSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-resetSTATIC'><div class="tab-pane fade active in" id="mresetSTATIC1"><p>Resets the NFC device to default configuration. Pollingtime will set to 90, passkey to empty string.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mresetSTATIC2"></div><div class="tab-pane fade" id="mresetSTATIC3"></div><div class="tab-pane fade" id="mresetSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mresetSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.reset()</code> </li><li>Ruby: <code>Rho::Adapter.reset()</code></li></ul></li></ul></div></div></div>  </div><a name ='msetConfigChangeHandlerSTATIC'/><div class=' method  js ruby' id='msetConfigChangeHandlerSTATIC'><h3><strong  >setConfigChangeHandler</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetConfigChangeHandlerSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#msetConfigChangeHandlerSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#msetConfigChangeHandlerSTATIC3" data-toggle="tab">Callback</a></li><li ><a href="#msetConfigChangeHandlerSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#msetConfigChangeHandlerSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setConfigChangeHandlerSTATIC'><div class="tab-pane fade active in" id="msetConfigChangeHandlerSTATIC1"><p>Register callback for config change. If you change properties like pollingTimeout, passkey then callback will fire.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetConfigChangeHandlerSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="msetConfigChangeHandlerSTATIC3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>passKey : <span class='text-info'>STRING</span><p><p>Bluetooth device pass key.</p>
 </p></li><li>pollingTimeout : <span class='text-info'>INTEGER</span><p><p>Polling timeout in seconds of the NFC device.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="msetConfigChangeHandlerSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="msetConfigChangeHandlerSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.setConfigChangeHandler(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Adapter.setConfigChangeHandler(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetMessageHandlerSTATIC'/><div class=' method  js ruby' id='msetMessageHandlerSTATIC'><h3><strong  >setMessageHandler</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetMessageHandlerSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#msetMessageHandlerSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#msetMessageHandlerSTATIC3" data-toggle="tab">Callback</a></li><li ><a href="#msetMessageHandlerSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#msetMessageHandlerSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setMessageHandlerSTATIC'><div class="tab-pane fade active in" id="msetMessageHandlerSTATIC1"><p>Register callback for Message receive.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetMessageHandlerSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="msetMessageHandlerSTATIC3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>messageId : <span class='text-info'>STRING</span><p><p>Message Id.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="msetMessageHandlerSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="msetMessageHandlerSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.setMessageHandler(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Adapter.setMessageHandler(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetTagDetectionHandlerSTATIC'/><div class=' method  js ruby' id='msetTagDetectionHandlerSTATIC'><h3><strong  >setTagDetectionHandler</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">ARRAY</span> tagsToBeDetected, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetTagDetectionHandlerSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#msetTagDetectionHandlerSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#msetTagDetectionHandlerSTATIC3" data-toggle="tab">Callback</a></li><li ><a href="#msetTagDetectionHandlerSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#msetTagDetectionHandlerSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setTagDetectionHandlerSTATIC'><div class="tab-pane fade active in" id="msetTagDetectionHandlerSTATIC1"><p>Register callback for Tag detection.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetTagDetectionHandlerSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>tagsToBeDetected : <span class='text-info'>ARRAY</span><p><p>Array with tag types &ndash; only those tags will be detected. If empty array &ndash; all types. See below tagsSupported parameter in getDeviceInfo method.</p>
 </p></li><ul><li><i>Object<i> : <span class='text-info'>INTEGER</span><p> </p></li></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="msetTagDetectionHandlerSTATIC3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>tagId : <span class='text-info'>STRING</span><p><p>Tag Id.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="msetTagDetectionHandlerSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="msetTagDetectionHandlerSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.setTagDetectionHandler(<span class="text-info">ARRAY</span> tagsToBeDetected, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Adapter.setTagDetectionHandler(<span class="text-info">ARRAY</span> tagsToBeDetected, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mstopSTATIC'/><div class=' method  js ruby' id='mstopSTATIC'><h3><strong  >stop</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mstopSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mstopSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mstopSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mstopSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-stopSTATIC'><div class="tab-pane fade active in" id="mstopSTATIC1"><p>Stops the NFC device.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mstopSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mstopSTATIC3"></div><div class="tab-pane fade" id="mstopSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mstopSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.stop(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Adapter.stop(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Properties'></a>
<h2><i class='icon-list'></i>Properties</h2>

<a name='pisActive'></a><div class=' method  js ruby' id='pisActive'><h3><strong  >isActive</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pisActive1" data-toggle="tab">Description</a></li><li ><a href="#pisActive6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-isActive'><div class="tab-pane fade active in" id="pisActive1"><p>Gets a value indicating whether or not the NFC device is currently active.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pisActive2"></div><div class="tab-pane fade" id="pisActive5"></div><div class="tab-pane fade" id="pisActive6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.isActive</code> </li><li>Ruby: <code>Rho::Adapter.isActive</code></li></ul></li></ul></div></div></div>  </div><a name='ppasskey'></a><div class=' method  js ruby' id='ppasskey'><h3><strong  >passkey</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#ppasskey1" data-toggle="tab">Description</a></li><li ><a href="#ppasskey6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-passkey'><div class="tab-pane fade active in" id="ppasskey1"><p>Bluetooth device pass key. Max of 6 characters, empty string is no Passkey (Default is No Passkey). The property is enabled after NFC engine activation.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="ppasskey2"></div><div class="tab-pane fade" id="ppasskey5"></div><div class="tab-pane fade" id="ppasskey6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.passkey</code> </li><li>Ruby: <code>Rho::Adapter.passkey</code></li></ul></li></ul></div></div></div>  </div><a name='ppollingTimeout'></a><div class=' method  js ruby' id='ppollingTimeout'><h3><strong  >pollingTimeout</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#ppollingTimeout1" data-toggle="tab">Description</a></li><li ><a href="#ppollingTimeout6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-pollingTimeout'><div class="tab-pane fade active in" id="ppollingTimeout1"><p>Polling timeout in seconds of the NFC device. 0 &ndash; timeout disabled, default: 90. The property is enabled after NFC engine activation.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="ppollingTimeout2"></div><div class="tab-pane fade" id="ppollingTimeout5"></div><div class="tab-pane fade" id="ppollingTimeout6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.pollingTimeout</code> </li><li>Ruby: <code>Rho::Adapter.pollingTimeout</code></li></ul></li></ul></div></div></div>  </div><a name='psupported'></a><div class=' method  js ruby' id='psupported'><h3><strong  >supported</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#psupported1" data-toggle="tab">Description</a></li><li ><a href="#psupported6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-supported'><div class="tab-pane fade active in" id="psupported1"><p>Return true if NFC supported on this device.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="psupported2"></div><div class="tab-pane fade" id="psupported5"></div><div class="tab-pane fade" id="psupported6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.supported</code> </li><li>Ruby: <code>Rho::Adapter.supported</code></li></ul></li></ul></div></div></div>  </div><a name='pversion'></a><div class=' method  js ruby' id='pversion'><h3><strong  >version</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pversion1" data-toggle="tab">Description</a></li><li ><a href="#pversion6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-version'><div class="tab-pane fade active in" id="pversion1"><p>Gets the version of the NFC stack.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pversion2"></div><div class="tab-pane fade" id="pversion5"></div><div class="tab-pane fade" id="pversion6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Adapter.version</code> </li><li>Ruby: <code>Rho::Adapter.version</code></li></ul></li></ul></div></div></div>  </div></div>